[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "food-delivery-env"
version = "1.0.0"
description = "Food Delivery Operations Environment for OpenEnv - AI agent manages order assignment, driver routing, and delivery tracking"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["food_delivery_env", "food_delivery_env.server"]
package-dir = { "food_delivery_env" = ".", "food_delivery_env.server" = "server" }
